--- a/src/style/Produtos.css
+++ b/src/style/Produtos.css
@@ -82,7 +82,7 @@ header .navigation li a {
 
 .container .text h2 span{
   color: red;
-  font-size: 3.5em;
+  font-size: 1.5em;
 }
 .container .text p {
   color:#fff ;
@@ -149,4 +149,40 @@ transform: translateY(-10px);
 .boximg .img1{
   transform: rotate(-15deg);
 
+}
+
+
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 20px;
+}
+
+.product {
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 20px;
+  text-align: center;
+  width: 200px;
+  transition: transform 0.2s;
+  cursor: pointer;
+}
+
+.product img {
+  max-width: 100%;
+  height: auto;
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 10px;
+}
+
+.product h2 {
+  font-size: 1.5em;
+  margin: 0;
+}
+
+.product:hover {
+  transform: scale(1.05);
 }
